Position clear search button correctly on Safari

--- a/src/modules/search/components/_search-bar.scss
+++ b/src/modules/search/components/_search-bar.scss
@@ -28,6 +28,7 @@
     &-clear {
       position: absolute;
       right: 50px + 4 * $gap;
+      top: 3 * $gap;
       cursor: pointer;
     }
 
